<resources>
    <string name="app_name">Android Flexicious Data Grid</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_visit">Website</string>
    <string name="view">View Details</string>

    <string name="menu_grid_export">Export</string>
    <string name="menu_grid_reset">Reset</string>
    <string name="menu_grid_next_page">Next Page</string>
    <string name="menu_grid_last_page">Last Page</string>
    <string name="menu_grid_previous_page">Previous Page</string>
    <string name="menu_grid_firs_page">First Page</string>
    <string name="menu_grid_print">Print</string>
    <string name="menu_grid_hide_footer">Hide Footer</string>
    <string name="menu_grid_show_footer">Show Footer</string>
    <string name="menu_grid_show_filter">Show Filter</string>
    <string name="menu_grid_hide_filter">Hide Filter</string>
    <string name="menu_grid_run_filter">Run Filter</string>
    <string name="menu_grid_clear_Filter">Clear Filter</string>
    <string name="menu_grid_settings">Settings</string>
    <string name="menu_grid_save_settings">Save Settings</string>
    <string name="menu_grid_select_page">Go To Page</string>
</resources>
